# email-gen-assistant

./: .env.example  .gitignore  LICENSE  README.md  app.py  chainlit.md  compare_results.py  main.py  pyproject.toml  run_eval.py
.chainlit/: config.toml
data/: scenarios.json
data/results/: comparison.csv  model_a.csv  model_b.csv
docs/: architecture.md  plan-of-action.md
report/: analysis.md
src/: prompts.py  state.py  utils.py
src/evaluator/: graph.py  metrics.py  nodes.py
src/generator/: graph.py  nodes.py
tests/: test_generator.py  test_metrics.py
